# tello_ros

tello_driver/: CMakeLists.txt  package.xml
tello_driver/include/: tello_driver_node.hpp  tello_joy_node.hpp
tello_driver/src/: tello_driver_node.cpp  tello_joy_main.cpp  tello_joy_node.cpp  video_socket.cpp
tello_gazebo/: CMakeLists.txt
tello_gazebo/launch/: simple_launch.py
tello_msgs/: CMakeLists.txt
